--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-  <title>React App</title>
+  <title>Audioverse</title>
 </head>
 
 <body>
